# statik-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENCE-MIT  README.md  TODO.md  rustfmt.toml
.github/workflows/: ci.yml  docker.yml
crates/statik_common/: Cargo.toml
crates/statik_common/src/: chat.rs  error.rs  impls.rs  lib.rs  packet.rs  raw.rs  varint.rs  varint_prefixed_vec.rs
crates/statik_core/: Cargo.toml
crates/statik_core/src/: chat.rs  impls.rs  lib.rs  packet.rs  raw.rs  state.rs  varint.rs
crates/statik_derive/: Cargo.toml
crates/statik_derive/src/: decode.rs  encode.rs  lib.rs  packet.rs  packet_group.rs
crates/statik_proto/: Cargo.toml
crates/statik_proto/src/: c2s.rs  lib.rs  s2c.rs  state.rs
crates/statik_proto/src/c2s/: handshake.rs  handshaking.rs  login.rs  status.rs
crates/statik_proto/src/c2s/handshaking/: handshake.rs  legacy_ping.rs
crates/statik_proto/src/c2s/login/: encryption_response.rs  login_plugin_response.rs  login_start.rs
crates/statik_proto/src/c2s/status/: ping.rs  request.rs
crates/statik_proto/src/s2c/: login.rs  status.rs
crates/statik_proto/src/s2c/login/: disconnect.rs  encryption_request.rs  login_plugin_request.rs  login_success.rs  set_compression.rs
crates/statik_proto/src/s2c/status/: pong.rs  response.rs
crates/statik_server/: Cargo.toml
crates/statik_server/src/: config.rs  connection.rs  handler.rs  lib.rs  server.rs  shutdown.rs
src/: config.rs  connection.rs  handler.rs  main.rs  player.rs  quit.rs  server.rs  shutdown.rs
