[package]
name = "statik"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A pure rust lightweight 'fallback' minecraft server."
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

[workspace]
members = [ "crates/*" ]
resolver = "2"

[package.metadata]
msrv = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
bytes = { version = "1.4.0", features = ["serde"] }
base64 = "0.21.0"
byteorder = "1.4.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
log = "0.4.17"

statik_derive = { path = "crates/statik_derive" }
statik_proto = { path = "crates/statik_proto" }

[profile.dev.package."*"]
opt-level = 3

#for much improved compile times on macos
[profile.dev]
opt-level = 1
