[package]
name = "statik"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A pure rust lightweight 'fallback' minecraft server."
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

[workspace]
members = [ "crates/*" ]
exclude = [ "helpers/*" ]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#asynchronous runtime
tokio = { version = "1.28.0", features = ["full"] }
#uuid encoding/decoding
uuid = { version = "1.3.2", features = ["serde"] }
#serialising/deserialising#
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
#creating random values
rand = "0.8.5"
#base64 encoding/decoding
base64 = "0.21.0"
#low level byte manipulation#
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
#sending http requests
reqwest = "0.11.17"
#templating
tera = "1.18.1"
#logging#
log = "0.4.17"
tracing = "0.1"
tracing-subscriber = "0.3.17"
#error handling#
anyhow = "1.0.71"
thiserror = "1.0.40"

statik_derive = { path = "crates/statik_derive" }
statik_proto = { path = "crates/statik_proto" }
statik_common = { path = "crates/statik_common" }

[profile.dev.package."*"]
opt-level = 3

#for much improved compile times on macos
[profile.dev]
opt-level = 1
