
[package]
name = "statik"
version = "0.2.1"
edition = "2021"
description = "A pure rust lightweight 'fallback' minecraft server."
license = "MIT OR Apache-2.0"
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

[workspace]
members = [ "crates/*" ]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tracing-subscriber = "0.3.17"
#CLI parsing#
clap = { version ="4.2.7", features = ["derive"] }
toml = "0.7.3"

tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

statik_common = { workspace = true }
statik_server = { workspace = true }

[workspace.dependencies]
#uuid encoding/decoding
uuid = { version = "1.3.2", features = ["serde"] }
#serialising/deserialising#
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#creating random values
rand = "0.8.5"
#base64 encoding/decoding
base64 = "0.21.0"
#low level byte manipulation#
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
#logging
log = "0.4.17"
#error handling#
anyhow = "1.0.71"
thiserror = "1.0.40"
#asynchronous runtime
tokio = { version = "1.28.1", features = ["full"] }
#sending http requests
reqwest = { version = "0.11.17", default-features = false }
#templating - see TODO.md
# tera = { version = "1.18.1", default-features = false }
#tracing
tracing = "0.1.37"

statik_derive = { path = "crates/statik_derive", version = "0.2.1" }
statik_proto = { path = "crates/statik_proto", version = "0.2.1" }
statik_common = { path = "crates/statik_common", version = "0.2.1" }
statik_server = { path = "crates/statik_server", version = "0.2.1" }

[profile.dev.package."*"]
opt-level = 3

#for much improved compile times on macos
[profile.dev]
opt-level = 1