[package]
name = "statik_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
byteorder = "1.4.3"
serde = { version = "1.0.160", features = ["derive"] }
num-traits = "0.2.15"
anyhow = "1.0.71"
serde_json = "1.0.96"
uuid = "1.3.2"
