[package]
name = "statik_common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
# num-traits = "0.2.15"
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
