[package]
name = "statik_derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "statik_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["extra-traits"] }
proc-macro2 = "1.0.56"
