[package]
name = "statik_derive"
version = "0.2.0"
edition = "2021"

[lib]
name = "statik_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

statik_common = { workspace = true }
