[package]
name = "statik_derive"
version = "0.2.0"
edition = "2021"
description = "Derive macros used by the 'statik' minecraft fallback server."
license = "MIT OR Apache-2.0"
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

[lib]
name = "statik_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

# statik_common = { workspace = true }