[package]
name = "statik_proto"
version = "0.2.0"
edition = "2021"
description = "Associated minecraft protocols and packets for the statik minecraft limbo server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

statik_derive = { workspace = true }
statik_common = { workspace = true }
