[package]
name = "statik_proto"
version = "0.2.0"
edition = "2021"
description = "Associated minecraft protocols and packets used by the 'statik' minecraft fallback server."
license = "MIT OR Apache-2.0"
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

statik_derive = { workspace = true }
statik_common = { workspace = true }
