[package]
name = "statik_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sending http requests
reqwest = "0.11.17"
#templating
tera = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid  = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
statik_common = { workspace = true }
statik_proto = { workspace = true }
