[package]
name = "statik_server"
version = "0.2.1"
edition = "2021"
description = "All the mc/api server related code used by the 'statik' minecraft fallback server."
license = "MIT OR Apache-2.0"
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sending http requests
reqwest = { workspace = true, features = ["rustls-tls", "json"]}
#templating
# tera = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid  = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
statik_common = { workspace = true }
statik_proto = { workspace = true }
