[package]
name = "statik_server"
version = "0.2.1"
edition = "2021"
description = "All the mc/api server related code used by the 'statik' minecraft fallback server."
license = "MIT OR Apache-2.0"
homepage = "https://sycrosity.github.io/statik-rs/"
repository = "https://github.com/Sycrosity/statik-rs/"
keywords = ["minecraft", "minecraft-server", "statik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sending http requests
reqwest = { workspace = true, features = ["rustls-tls", "json"]}
kube = { version = "0.83.0", default-features = false, features = ["client", "rustls-tls", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
#templating
# tera = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid  = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
statik_core = { workspace = true }
statik_proto = { workspace = true }
